# cardano-xport-demo

./: README.md
cross-chain/: .gitignore  README.md  cabal.project  cross-chain.cabal  flake.nix  utxoRef.json  value.json
cross-chain/app/: compiler.hs
cross-chain/data/: Address.json  ScriptCredential.json  adaAmount.json  adminHolderRedeemer.json  amount.json  groupNFTSymbol.json  groupTokenInfo.json  inboundTokenCurSymbol.json  nftMappingTokenCurSymbol.json  nftMintCheckProof.json  nftMintCheckTokenSymbol.json  nftTreasuryCheckProof.json  originData.json  outboundTokenCurSymbol.json  storeman.json  targetPKhdd.json  testAddress.json  testAddress2.json  testAddress3.json  testOutputDatum2.json  testOutputDatum3.json  treasuryCheckAddress.json  utxoRef.json  value.json
cross-chain/generated-plutus-scripts/v2/: adminNFT.plutus  adminNFTHolder.plutus  groupNFT-holder.plutus  groupNFT.plutus  inbound-check-token.plutus  inbound-check.plutus  inbound-token.plutus  mapping-token.plutus  mint-check-token.plutus  mint-check.plutus  nft-mapping-token2.plutus  nft-mapping-token3.plutus  nft-mint-check-token.plutus  nft-mint-check.plutus  nft-ref-holder.plutus  nft-treasury-check-token.plutus  nft-treasury-check.plutus  nft-treasury.plutus  outbound-Token.plutus  outbound-demo.plutus  outbound-holder.plutus  outbound-token.plutus  stakeCheck.plutus  storemanStake.plutus  treasury-check-token.plutus  treasury-check.plutus  treasury.plutus
cross-chain/src/CrossChain/: GroupNFTHolder.hs  InboundMintCheck.hs  InboundToken.hs  OutboundToken.hs  Types.hs  XPort.hs
evm-contracts/: README.md  hardhat.config.js  package.json
evm-contracts/contracts/: WmbGateway.sol
evm-contracts/contracts/app/: WmbAppV3.sol
evm-contracts/contracts/cardano-utils/: Betch32.sol  CBORCodec.sol  CardanoAddress.sol  CardanoAddressTest.sol  PlutusData.sol  README.md
evm-contracts/contracts/examples/: XToken.sol
evm-contracts/contracts/examples/TokenBridgeV2/: ERC20TokenHome4CardanoV2.sol
evm-contracts/contracts/interfaces/: IWmbReceiverNonEvm.sol
evm-contracts/contracts/solidity-cbor/: CBORCodec.sol  DemoMsgCodec.sol
evm-contracts/deployed/: cardanoPreprod.json  wanTestnet.json
evm-contracts/deployed/scAbi/: ERC20TokenHome4CardanoV2.json  XToken.json
evm-contracts/scripts/: config_tokenHome4ada.js  deploy_XToken_forTest.js  deploy_tokenHome4ada.js
evm-contracts/test/: TestMsgTask4Inboundjs  TestMsgTask4Outbound.js  TestMsgTask4TransferToken.js
evm-contracts/utils/: plutusDataTool.js
msg-agent/: README.md  package.json  tsconfig.json
msg-agent/src/: config.ts  index.ts  plutus.json  scripts.ts
msg-demo/: README.md  aiken.toml
msg-demo/validators/: demo_inbound.ak  demo_outbound.ak  demo_token.ak  test_cast.ak  utils.ak
