cabal-version:      3.0
name:               cross-chain
version:            1.0.0
description:
  End to end examples of creating and executing Plutus scripts.

author:             Wanchain
maintainer:         operations@Wanchain.io
license:            Apache-2.0
build-type:         Simple
extra-source-files: README.md

flag unexpected_thunks
  description: Turn on unexpected thunks checks
  default:     False

flag defer-plugin-errors
  description:
    Defer errors from the plugin, useful for things like Haddock that can't handle it.

  default:     False
  manual:      True

common common-definitions
  build-depends:      base ^>=4.14
  default-language:   Haskell2010
  default-extensions:
    NoImplicitPrelude
    ImportQualifiedPost
    OverloadedStrings

  -- See Plutus Tx readme for why we need the following flags:
  -- -fobject-code -fno-ignore-interface-pragmas and -fno-omit-interface-pragmas
  ghc-options:
    -Wall -Wcompat -Wincomplete-record-updates -Wnoncanonical-monad-instances
    -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints -Widentities
    -Wunused-packages -fobject-code -fno-ignore-interface-pragmas
    -fno-omit-interface-pragmas

  if flag(defer-plugin-errors)
    ghc-options: -fplugin-opt PlutusTx.Plugin:defer-errors

common maybe-Win32

library
  import:          common-definitions
  hs-source-dirs:  src

  if os(windows)
    build-depends: Win32

  if flag(unexpected_thunks)
    cpp-options: -DUNEXPECTED_THUNKS

  exposed-modules:
    CrossChain.GroupNFT
    CrossChain.GroupNFTHolder
    CrossChain.Types
    CrossChain.CheckToken
    CrossChain.AdminNFTHolder
    CrossChain.InboundMintCheck
    CrossChain.OutboundToken
    CrossChain.XPort
    CrossChain.InboundToken

  --------------------
  -- Local components
  --------------------
  build-depends:   plutus-script-utils >=1.0.0

  --------------------------
  -- Other IOG dependencies
  --------------------------
  build-depends:
    , cardano-api             >=1.35
    , cardano-cli             >=1.35
    , cardano-ledger-alonzo
    , cardano-ledger-babbage
    , cardano-ledger-core
    , cardano-ledger-shelley
    , cardano-slotting
    , ouroboros-consensus
    , ouroboros-network
    , plutus-ledger           >=1.0.0
    , plutus-ledger-api       >=1.0.0
    , plutus-tx               >=1.0.0
    , plutus-tx-plugin

  ------------------------
  -- Non-IOG dependencies
  ------------------------
  build-depends:
    , aeson
    , bytestring
    , containers
    , serialise
    , strict-containers
    , text
    , transformers
    , transformers-except

executable cross-chain
  import:         common-definitions
  hs-source-dirs: app
  main-is:        compiler.hs
  ghc-options:    -threaded -rtsopts -with-rtsopts=-T

  --------------------
  -- Local components
  --------------------
  build-depends:  cross-chain

  --------------------------
  -- Other IOG dependencies
  --------------------------
  build-depends:  cardano-api >=1.35

  ------------------------
  -- Non-IOG dependencies
  ------------------------
  build-depends:
    , base16-bytestring
    , bytestring
    , cardano-crypto-class
    , directory
    , filepath
    , plutus-core
    , plutus-ledger         >=1.0.0
    , plutus-ledger-api     >=1.0.0
    , plutus-tx             >=1.0.0
    , secp256k1-haskell
    , cardano-ledger-shelley
